# strava-activity-fix

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: auth_server.py  config.py  generator.py  main.py  rules.py  strava_client.py
config/: state.json
