[project]
name = "strava-activity-hide"
version = "0.1.0"
description = "Self-hosted tool to automatically hide, mute, modify, or delete Strava activities based on configurable rules."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "schedule>=1.2.0",
]

[project.scripts]
strava-activity-hide = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
